k3s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: myapp:latest  # Esta es la imagen local construida por el Job
          ports:
            - containerPort: 80
          volumeMounts:
            - name: workspace
              mountPath: /workspace  # Montaje del volumen
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: workspace
          hostPath:
            path: /mnt/data/myapp  # Montar el directorio persistente en el nodo
            type: Directory  # Asegura que sea un directorio

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Puerto donde estará accesible el servicio en el nodo
  type: NodePort
